Add support for JiJed mods and libraries